# Syrop

./: .gitignore  CMakeLists.txt  README  syrop-1.0.0-Linux.deb
doc/: CodingStyle.txt  PluginsAndConfigs.txt
doc/core/Python embedding/: python_boost.txt
doc/core/Python embedding/src/: Makefile  example1.cpp  example2.cpp  script.py
doc/utils/: SystemUtilitites.txt
doc/utils/src/: Makefile  test1.cpp  test2.cpp
doc/utils/trash/: main.cpp
nbproject/: Package-Default.bash  configurations.xml  project.xml
presentation/: proxy_conf.tex
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.dox  sysexception.h
src/core/: CMakeLists.txt  Makefile  README  appsettings.h  cmake_install.cmake  coreutils.cpp  coreutils.h  main.cpp  pluginrunner.cpp  pluginrunner.h  syrop.h
src/gui/: README
src/gui/QT/: .gitignore  CMakeList.txt  CMakeLists.txt  SyropGui.pro  applicationsettingstab.cpp  applicationsettingstab.h  applicationsettingstab.ui  datamodel.cpp  datamodel.h  dialogabout.h  dialogabout.ui  dialogaddapp.cpp  dialogaddapp.h  dialogaddnetwork.cpp  dialogaddnetwork.h  dialogaddnetwork.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qapplicationsettings.cpp  qapplicationsettings.h  tasks.txt  tasksHistory.txt
src/gui/SyropGui/: .gitignore  Makefile  SyropGui  SyropGui.pro  addNetwork.ui  dialogaddnetwork.cpp  dialogaddnetwork.h  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_widget.cpp  ui_widget.h  widget.ui  widget.ui.autosave
src/gui/config/: default
src/gui/gtk/: CMakeLists.txt  abstractwidget.h  applicationview.cpp  applicationview.h  authwidget.cpp  authwidget.h  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mappingdialog.cpp  mappingdialog.h  networkslist.cpp  networkslist.h  networkview.cpp  networkview.h  newnetworkdialog.cpp  newnetworkdialog.h  proxywidget.cpp  proxywidget.h  selectdialog.cpp  selectdialog.h  textwidget.cpp  textwidget.h  yesnodialog.cpp  yesnodialog.h
src/gui/gtk/rc/: CMakeLists.txt  syrop-ui.glade
src/gui/qt/: CMakeLists.txt  IHateYou.txt  SyropGui.pro  applicationsettingstab.cpp  applicationsettingstab.h  applicationsettingstab.ui  datamodel.cpp  datamodel.h  dialogabout.h  dialogabout.ui  dialogaddapp.cpp  dialogaddapp.h  dialogaddapp.ui  dialogaddnetwork.cpp  dialogaddnetwork.ui  dialogeditnetwork.cpp  dialogeditnetwork.h  dialogeditnetwork.ui  formfieldauth.cpp  formfieldauth.h  formfieldauth.ui  formfieldproxy.cpp  formfieldproxy.h  formfieldproxy.ui  formfieldtext.cpp  formfieldtext.h  formfieldtext.ui  formpluginfield.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tasks.txt  tasksHistory.txt
src/gui/res/: AptuNetwork  AptuNetwork.ini  HomeNetwork  HomeNetwork2  asadsSDASASD  asdadadsasd  asdsaads  asdsaads (copy)
src/gui/res/settings/: asasdasd__settings.ini  asdsadas__settings
src/includes/: .proxysettings.h.swp  README  appsettings.h  coreutils.h  emptyobject.h  fileinfo.h  filelocks.h  genutils.h  inidata.h  iniparser.h  namedb.h  namedb2.h  netparams.h  proxysettings.h  stringutils.h  sysexception.h  system.h
src/integration/: CBusMessage.cpp  CBusMessage.h  CExecuter.cpp  CExecuter.h  CFinder.cpp  CFinder.h  CMakeLists.txt  README  daemonexception.cpp  daemonexception.h  main.cpp  main.h  syropd.cpp  syropd.h
src/plugins/: CMakeLists.txt  Makefile  cmake_install.cmake
src/plugins/bash/: CMakeLists.txt  Makefile  bash.py  cmake_install.cmake  fields
src/plugins/default/: CMakeLists.txt  default.py  fields
src/plugins/example/: CMakeLists.txt  Makefile  cmake_install.cmake  example.py
src/plugins/gconf/: CMakeLists.txt  gconf.py
src/plugins/ssh/: .ssh.py.swp  CMakeLists.txt  Makefile  cmake_install.cmake  fields  main.py  ssh (copy).py  ssh.py
src/plugins/svn/: CMakeLists.txt  Makefile  cmake_install.cmake  fields  svn.py
src/utils/: .iniparser.cpp.swp  .proxysettings.cpp.swp  CMakeLists.txt  Makefile  README  a.out  appsettings.cpp  appsettings.d  cmake_install.cmake  conf.ini  coreutils.cpp  fileinfo.cpp  fileinfo.d  fileinfo.h  filelocks.cpp  filelocks.d  genutils.cpp  inidata.cpp  inidata.d  iniparser.cpp  iniparser.d  main.cpp  namedb.cpp  net_1.ini  net_2.ini  netparams.cpp  proxysettings.cpp  proxysettings.d  stringutils.cpp  sysexception.h  system.cpp  system.d  utils.cpp  utils.h
